@startuml  dm_ipc71.png
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

hide empty methods

Session "1" --> "*" lockDTO : has
Session "1" --> "1" Workbook : for
lockDTO "1" --> "1" Workbook : consists


class Session  <<(E, yellow)>>{

    - Workbook wb
    - Map<lockDTO, boolean>

    + isActive() : boolean
    + addNewLock() : void
    + disableLock() : void
    + closeSession() : void
    + locks() : Map<lockDTO, boolean>
    + openSession() : void
}

class Workbook <<(E, yellow)>>{

}

class lockDTO {
    - int timer
    - Workbook wb
    - String ssTitle
    - int cellRow
    - int cellColumn

    + workbook() : Workbook
    + spreadTitle() : String
    + timer() : int
    + cellRow() : int
    + cellColumn() : int

}

@enduml